관리자 , 유저 채팅 UI/UX와 백엔드 개선